# cobra

./: build.sbt
example/: slides.html
modules/cobra-client/src/main/scala/net/flatmap/cobra/: CobraJS.scala  Code.scala  Projects.scala  QuerySnippets.scala
modules/cobra-common/shared/src/main/scala/net/flatmap/cobra/: Messages.scala
modules/cobra-lsbinding/src/main/java/net/flatmap/cobra/: NoOpClient.java
modules/cobra-lsbinding/src/main/resources/: reference.conf
modules/cobra-lsbinding/src/main/scala/net/flatmap/cobra/: BindingConfig.scala  Language.scala  ProjectAnalyzer.scala  Snippet.scala  SnippetResolver.scala
modules/cobra-lsbinding/src/main/scala/net/flatmap/cobra/languageserver/: LSInteraction.scala  LSLauncher.scala  StartupConf.scala
modules/cobra-lsbinding/src/main/scala/net/flatmap/cobra/util/: FileUtils.scala  LSConverters.scala  PID.scala  WithResource.scala
modules/cobra-server/src/main/resources/: reference.conf
modules/cobra-server/src/main/scala/net/flatmap/cobra/: Cobra.scala  CobraServer.scala  Configuration.scala  ProjectMaster.scala  ProjectServer.scala
modules/cobra-server/src/main/scala/net/flatmap/cobra/paths/: IR.scala  Path.scala  PathParser.scala  SnippetSearch.scala  TypeNames.scala
modules/cobra-server/src/main/scala/net/flatmap/cobra/project/: ProjectMaster.scala  ProjectServer.scala  SearchActor.scala  SnippetDictionary.scala  SnippetSearch.scala  SourceLoadActor.scala  TypeNames.scala
modules/cobra-server/src/test/scala/net/flatmap/cobra/project/: PathSpec.scala  ProjectMasterTest.scala  SnippetSearchTest.scala
modules/pandocProjectFilter/: .gitignore  README.md  projectDefFilter.cabal  stack.yaml
modules/pandocProjectFilter/src/: Main.hs  MetaExtraction.hs  ProjectBuilder.hs
(+3 files in other folders)
